kubeflow/overlays/mlops/namespace.yml
# Namespace for Kubeflow Pipelines
apiVersion: v1
kind: Namespace
metadata:
  name: mlops-kubeflow
